welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:22: error: too many arguments for method estFaceMur: ()Boolean
		} else (estFaceMur) {
                                    ^